Compilateur/bison.output
Terminaux inutilisés dans la grammaire

    tNOT
    tERROR
    t


Grammaire

    0 $accept: Programme $end

    1 Programme: %empty
    2          | Programme Function

    3 $@1: %empty

    4 Function: $@1 tVOID Declaration tLBRACE Statement tRBRACE

    5 $@2: %empty

    6 Function: $@2 tINT Declaration tLBRACE Statement Return tSEMI tRBRACE

    7 Declaration: tID tLPAR Argument tRPAR

    8 Argument: tVOID
    9         | tINT tID
   10         | tINT tID tCOMMA Argument

   11 Statement: %empty
   12          | tCONST tINT Initialisation tSEMI Statement
   13          | tINT Initialisation tSEMI Statement
   14          | Assignment tSEMI Statement
   15          | Print
   16          | While_l
   17          | If_condition

   18 If_condition: tIF tLPAR Expression_Log tRPAR tLBRACE Statement tRBRACE Statement
   19             | tIF tLPAR Expression_Log tRPAR tLBRACE Statement tRBRACE tELSE tLBRACE Statement tRBRACE Statement

   20 $@3: %empty

   21 While_l: $@3 tWHILE tLPAR Expression_Log tRPAR tLBRACE Statement tRBRACE Statement

   22 Print: tPRINT tLPAR tID tRPAR tSEMI Statement

   23 Assignment: tID tASSIGN Expression

   24 Initialisation: tID
   25               | tID tASSIGN Expression
   26               | Initialisation tCOMMA Initialisation

   27 Expression: tID
   28           | tNB
   29           | tID tLPAR Parameter tRPAR
   30           | tID tLPAR tRPAR
   31           | Expression tADD Expression
   32           | Expression tSUB Expression
   33           | Expression tMUL Expression
   34           | Expression tDIV Expression
   35           | Expression tLT Expression
   36           | Expression tLE Expression
   37           | Expression tGT Expression
   38           | Expression tGE Expression
   39           | Expression tEQ Expression
   40           | Expression tNE Expression

   41 Expression_Log: Expression
   42               | Expression_Log tOR Expression_Log
   43               | Expression_Log tAND Expression_Log

   44 Parameter: Expression
   45          | Expression tCOMMA Parameter

   46 Return: tRETURN tLPAR Expression tRPAR
   47       | tRETURN Expression


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tIF (258) 18 19
    tELSE (259) 19
    tWHILE (260) 21
    tPRINT (261) 22
    tRETURN (262) 46 47
    tINT (263) 6 9 10 12 13
    tVOID (264) 4 8
    tCONST (265) 12
    tADD (266) 31
    tSUB (267) 32
    tMUL (268) 33
    tDIV (269) 34
    tLT (270) 35
    tGT (271) 37
    tNE (272) 40
    tEQ (273) 39
    tLE (274) 36
    tGE (275) 38
    tASSIGN (276) 23 25
    tAND (277) 43
    tOR (278) 42
    tNOT (279)
    tLBRACE (280) 4 6 18 19 21
    tRBRACE (281) 4 6 18 19 21
    tLPAR (282) 7 18 19 21 22 29 30 46
    tRPAR (283) 7 18 19 21 22 29 30 46
    tSEMI (284) 6 12 13 14 22
    tCOMMA (285) 10 26 45
    tERROR (286)
    tID <s> (287) 7 9 10 22 23 24 25 27 29 30
    tNB <num> (288) 28
    t (289)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (35)
        à gauche: 0
    Programme (36)
        à gauche: 1 2
        à droite: 0 2
    Function (37)
        à gauche: 4 6
        à droite: 2
    $@1 (38)
        à gauche: 3
        à droite: 4
    $@2 (39)
        à gauche: 5
        à droite: 6
    Declaration (40)
        à gauche: 7
        à droite: 4 6
    Argument (41)
        à gauche: 8 9 10
        à droite: 7 10
    Statement (42)
        à gauche: 11 12 13 14 15 16 17
        à droite: 4 6 12 13 14 18 19 21 22
    If_condition (43)
        à gauche: 18 19
        à droite: 17
    While_l (44)
        à gauche: 21
        à droite: 16
    $@3 (45)
        à gauche: 20
        à droite: 21
    Print (46)
        à gauche: 22
        à droite: 15
    Assignment (47)
        à gauche: 23
        à droite: 14
    Initialisation (48)
        à gauche: 24 25 26
        à droite: 12 13 26
    Expression (49)
        à gauche: 27 28 29 30 31 32 33 34 35 36 37 38 39 40
        à droite: 23 25 31 32 33 34 35 36 37 38 39 40 41 44 45 46 47
    Expression_Log (50)
        à gauche: 41 42 43
        à droite: 18 19 21 42 43
    Parameter (51)
        à gauche: 44 45
        à droite: 29 45
    Return (52)
        à gauche: 46 47
        à droite: 6


État 0

    0 $accept: . Programme $end

    $défaut  réduction par utilisation de la règle 1 (Programme)

    Programme  aller à l'état 1


État 1

    0 $accept: Programme . $end
    2 Programme: Programme . Function

    $end  décalage et aller à l'état 2

    tINT      réduction par utilisation de la règle 5 ($@2)
    $défaut  réduction par utilisation de la règle 3 ($@1)

    Function  aller à l'état 3
    $@1       aller à l'état 4
    $@2       aller à l'état 5


État 2

    0 $accept: Programme $end .

    $défaut  accepter


État 3

    2 Programme: Programme Function .

    $défaut  réduction par utilisation de la règle 2 (Programme)


État 4

    4 Function: $@1 . tVOID Declaration tLBRACE Statement tRBRACE

    tVOID  décalage et aller à l'état 6


État 5

    6 Function: $@2 . tINT Declaration tLBRACE Statement Return tSEMI tRBRACE

    tINT  décalage et aller à l'état 7


État 6

    4 Function: $@1 tVOID . Declaration tLBRACE Statement tRBRACE

    tID  décalage et aller à l'état 8

    Declaration  aller à l'état 9


État 7

    6 Function: $@2 tINT . Declaration tLBRACE Statement Return tSEMI tRBRACE

    tID  décalage et aller à l'état 8

    Declaration  aller à l'état 10


État 8

    7 Declaration: tID . tLPAR Argument tRPAR

    tLPAR  décalage et aller à l'état 11


État 9

    4 Function: $@1 tVOID Declaration . tLBRACE Statement tRBRACE

    tLBRACE  décalage et aller à l'état 12


État 10

    6 Function: $@2 tINT Declaration . tLBRACE Statement Return tSEMI tRBRACE

    tLBRACE  décalage et aller à l'état 13


État 11

    7 Declaration: tID tLPAR . Argument tRPAR

    tINT   décalage et aller à l'état 14
    tVOID  décalage et aller à l'état 15

    Argument  aller à l'état 16


État 12

    4 Function: $@1 tVOID Declaration tLBRACE . Statement tRBRACE

    tIF     décalage et aller à l'état 17
    tPRINT  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tCONST  décalage et aller à l'état 20
    tID     décalage et aller à l'état 21

    tWHILE    réduction par utilisation de la règle 20 ($@3)
    $défaut  réduction par utilisation de la règle 11 (Statement)

    Statement     aller à l'état 22
    If_condition  aller à l'état 23
    While_l       aller à l'état 24
    $@3           aller à l'état 25
    Print         aller à l'état 26
    Assignment    aller à l'état 27


État 13

    6 Function: $@2 tINT Declaration tLBRACE . Statement Return tSEMI tRBRACE

    tIF     décalage et aller à l'état 17
    tPRINT  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tCONST  décalage et aller à l'état 20
    tID     décalage et aller à l'état 21

    tWHILE    réduction par utilisation de la règle 20 ($@3)
    $défaut  réduction par utilisation de la règle 11 (Statement)

    Statement     aller à l'état 28
    If_condition  aller à l'état 23
    While_l       aller à l'état 24
    $@3           aller à l'état 25
    Print         aller à l'état 26
    Assignment    aller à l'état 27


État 14

    9 Argument: tINT . tID
   10         | tINT . tID tCOMMA Argument

    tID  décalage et aller à l'état 29


État 15

    8 Argument: tVOID .

    $défaut  réduction par utilisation de la règle 8 (Argument)


État 16

    7 Declaration: tID tLPAR Argument . tRPAR

    tRPAR  décalage et aller à l'état 30


État 17

   18 If_condition: tIF . tLPAR Expression_Log tRPAR tLBRACE Statement tRBRACE Statement
   19             | tIF . tLPAR Expression_Log tRPAR tLBRACE Statement tRBRACE tELSE tLBRACE Statement tRBRACE Statement

    tLPAR  décalage et aller à l'état 31


État 18

   22 Print: tPRINT . tLPAR tID tRPAR tSEMI Statement

    tLPAR  décalage et aller à l'état 32


État 19

   13 Statement: tINT . Initialisation tSEMI Statement

    tID  décalage et aller à l'état 33

    Initialisation  aller à l'état 34


État 20

   12 Statement: tCONST . tINT Initialisation tSEMI Statement

    tINT  décalage et aller à l'état 35


État 21

   23 Assignment: tID . tASSIGN Expression

    tASSIGN  décalage et aller à l'état 36


État 22

    4 Function: $@1 tVOID Declaration tLBRACE Statement . tRBRACE

    tRBRACE  décalage et aller à l'état 37


État 23

   17 Statement: If_condition .

    $défaut  réduction par utilisation de la règle 17 (Statement)


État 24

   16 Statement: While_l .

    $défaut  réduction par utilisation de la règle 16 (Statement)


État 25

   21 While_l: $@3 . tWHILE tLPAR Expression_Log tRPAR tLBRACE Statement tRBRACE Statement

    tWHILE  décalage et aller à l'état 38


État 26

   15 Statement: Print .

    $défaut  réduction par utilisation de la règle 15 (Statement)


État 27

   14 Statement: Assignment . tSEMI Statement

    tSEMI  décalage et aller à l'état 39


État 28

    6 Function: $@2 tINT Declaration tLBRACE Statement . Return tSEMI tRBRACE

    tRETURN  décalage et aller à l'état 40

    Return  aller à l'état 41


État 29

    9 Argument: tINT tID .
   10         | tINT tID . tCOMMA Argument

    tCOMMA  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 9 (Argument)


État 30

    7 Declaration: tID tLPAR Argument tRPAR .

    $défaut  réduction par utilisation de la règle 7 (Declaration)


État 31

   18 If_condition: tIF tLPAR . Expression_Log tRPAR tLBRACE Statement tRBRACE Statement
   19             | tIF tLPAR . Expression_Log tRPAR tLBRACE Statement tRBRACE tELSE tLBRACE Statement tRBRACE Statement

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression      aller à l'état 45
    Expression_Log  aller à l'état 46


État 32

   22 Print: tPRINT tLPAR . tID tRPAR tSEMI Statement

    tID  décalage et aller à l'état 47


État 33

   24 Initialisation: tID .
   25               | tID . tASSIGN Expression

    tASSIGN  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 24 (Initialisation)


État 34

   13 Statement: tINT Initialisation . tSEMI Statement
   26 Initialisation: Initialisation . tCOMMA Initialisation

    tSEMI   décalage et aller à l'état 49
    tCOMMA  décalage et aller à l'état 50


État 35

   12 Statement: tCONST tINT . Initialisation tSEMI Statement

    tID  décalage et aller à l'état 33

    Initialisation  aller à l'état 51


État 36

   23 Assignment: tID tASSIGN . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 52


État 37

    4 Function: $@1 tVOID Declaration tLBRACE Statement tRBRACE .

    $défaut  réduction par utilisation de la règle 4 (Function)


État 38

   21 While_l: $@3 tWHILE . tLPAR Expression_Log tRPAR tLBRACE Statement tRBRACE Statement

    tLPAR  décalage et aller à l'état 53


État 39

   14 Statement: Assignment tSEMI . Statement

    tIF     décalage et aller à l'état 17
    tPRINT  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tCONST  décalage et aller à l'état 20
    tID     décalage et aller à l'état 21

    tWHILE    réduction par utilisation de la règle 20 ($@3)
    $défaut  réduction par utilisation de la règle 11 (Statement)

    Statement     aller à l'état 54
    If_condition  aller à l'état 23
    While_l       aller à l'état 24
    $@3           aller à l'état 25
    Print         aller à l'état 26
    Assignment    aller à l'état 27


État 40

   46 Return: tRETURN . tLPAR Expression tRPAR
   47       | tRETURN . Expression

    tLPAR  décalage et aller à l'état 55
    tID    décalage et aller à l'état 43
    tNB    décalage et aller à l'état 44

    Expression  aller à l'état 56


État 41

    6 Function: $@2 tINT Declaration tLBRACE Statement Return . tSEMI tRBRACE

    tSEMI  décalage et aller à l'état 57


État 42

   10 Argument: tINT tID tCOMMA . Argument

    tINT   décalage et aller à l'état 14
    tVOID  décalage et aller à l'état 15

    Argument  aller à l'état 58


État 43

   27 Expression: tID .
   29           | tID . tLPAR Parameter tRPAR
   30           | tID . tLPAR tRPAR

    tLPAR  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 27 (Expression)


État 44

   28 Expression: tNB .

    $défaut  réduction par utilisation de la règle 28 (Expression)


État 45

   31 Expression: Expression . tADD Expression
   32           | Expression . tSUB Expression
   33           | Expression . tMUL Expression
   34           | Expression . tDIV Expression
   35           | Expression . tLT Expression
   36           | Expression . tLE Expression
   37           | Expression . tGT Expression
   38           | Expression . tGE Expression
   39           | Expression . tEQ Expression
   40           | Expression . tNE Expression
   41 Expression_Log: Expression .

    tADD  décalage et aller à l'état 60
    tSUB  décalage et aller à l'état 61
    tMUL  décalage et aller à l'état 62
    tDIV  décalage et aller à l'état 63
    tLT   décalage et aller à l'état 64
    tGT   décalage et aller à l'état 65
    tNE   décalage et aller à l'état 66
    tEQ   décalage et aller à l'état 67
    tLE   décalage et aller à l'état 68
    tGE   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 41 (Expression_Log)


État 46

   18 If_condition: tIF tLPAR Expression_Log . tRPAR tLBRACE Statement tRBRACE Statement
   19             | tIF tLPAR Expression_Log . tRPAR tLBRACE Statement tRBRACE tELSE tLBRACE Statement tRBRACE Statement
   42 Expression_Log: Expression_Log . tOR Expression_Log
   43               | Expression_Log . tAND Expression_Log

    tAND   décalage et aller à l'état 70
    tOR    décalage et aller à l'état 71
    tRPAR  décalage et aller à l'état 72


État 47

   22 Print: tPRINT tLPAR tID . tRPAR tSEMI Statement

    tRPAR  décalage et aller à l'état 73


État 48

   25 Initialisation: tID tASSIGN . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 74


État 49

   13 Statement: tINT Initialisation tSEMI . Statement

    tIF     décalage et aller à l'état 17
    tPRINT  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tCONST  décalage et aller à l'état 20
    tID     décalage et aller à l'état 21

    tWHILE    réduction par utilisation de la règle 20 ($@3)
    $défaut  réduction par utilisation de la règle 11 (Statement)

    Statement     aller à l'état 75
    If_condition  aller à l'état 23
    While_l       aller à l'état 24
    $@3           aller à l'état 25
    Print         aller à l'état 26
    Assignment    aller à l'état 27


État 50

   26 Initialisation: Initialisation tCOMMA . Initialisation

    tID  décalage et aller à l'état 33

    Initialisation  aller à l'état 76


État 51

   12 Statement: tCONST tINT Initialisation . tSEMI Statement
   26 Initialisation: Initialisation . tCOMMA Initialisation

    tSEMI   décalage et aller à l'état 77
    tCOMMA  décalage et aller à l'état 50


État 52

   23 Assignment: tID tASSIGN Expression .
   31 Expression: Expression . tADD Expression
   32           | Expression . tSUB Expression
   33           | Expression . tMUL Expression
   34           | Expression . tDIV Expression
   35           | Expression . tLT Expression
   36           | Expression . tLE Expression
   37           | Expression . tGT Expression
   38           | Expression . tGE Expression
   39           | Expression . tEQ Expression
   40           | Expression . tNE Expression

    tADD  décalage et aller à l'état 60
    tSUB  décalage et aller à l'état 61
    tMUL  décalage et aller à l'état 62
    tDIV  décalage et aller à l'état 63
    tLT   décalage et aller à l'état 64
    tGT   décalage et aller à l'état 65
    tNE   décalage et aller à l'état 66
    tEQ   décalage et aller à l'état 67
    tLE   décalage et aller à l'état 68
    tGE   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 23 (Assignment)


État 53

   21 While_l: $@3 tWHILE tLPAR . Expression_Log tRPAR tLBRACE Statement tRBRACE Statement

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression      aller à l'état 45
    Expression_Log  aller à l'état 78


État 54

   14 Statement: Assignment tSEMI Statement .

    $défaut  réduction par utilisation de la règle 14 (Statement)


État 55

   46 Return: tRETURN tLPAR . Expression tRPAR

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 79


État 56

   31 Expression: Expression . tADD Expression
   32           | Expression . tSUB Expression
   33           | Expression . tMUL Expression
   34           | Expression . tDIV Expression
   35           | Expression . tLT Expression
   36           | Expression . tLE Expression
   37           | Expression . tGT Expression
   38           | Expression . tGE Expression
   39           | Expression . tEQ Expression
   40           | Expression . tNE Expression
   47 Return: tRETURN Expression .

    tADD  décalage et aller à l'état 60
    tSUB  décalage et aller à l'état 61
    tMUL  décalage et aller à l'état 62
    tDIV  décalage et aller à l'état 63
    tLT   décalage et aller à l'état 64
    tGT   décalage et aller à l'état 65
    tNE   décalage et aller à l'état 66
    tEQ   décalage et aller à l'état 67
    tLE   décalage et aller à l'état 68
    tGE   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 47 (Return)


État 57

    6 Function: $@2 tINT Declaration tLBRACE Statement Return tSEMI . tRBRACE

    tRBRACE  décalage et aller à l'état 80


État 58

   10 Argument: tINT tID tCOMMA Argument .

    $défaut  réduction par utilisation de la règle 10 (Argument)


État 59

   29 Expression: tID tLPAR . Parameter tRPAR
   30           | tID tLPAR . tRPAR

    tRPAR  décalage et aller à l'état 81
    tID    décalage et aller à l'état 43
    tNB    décalage et aller à l'état 44

    Expression  aller à l'état 82
    Parameter   aller à l'état 83


État 60

   31 Expression: Expression tADD . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 84


État 61

   32 Expression: Expression tSUB . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 85


État 62

   33 Expression: Expression tMUL . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 86


État 63

   34 Expression: Expression tDIV . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 87


État 64

   35 Expression: Expression tLT . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 88


État 65

   37 Expression: Expression tGT . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 89


État 66

   40 Expression: Expression tNE . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 90


État 67

   39 Expression: Expression tEQ . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 91


État 68

   36 Expression: Expression tLE . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 92


État 69

   38 Expression: Expression tGE . Expression

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression  aller à l'état 93


État 70

   43 Expression_Log: Expression_Log tAND . Expression_Log

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression      aller à l'état 45
    Expression_Log  aller à l'état 94


État 71

   42 Expression_Log: Expression_Log tOR . Expression_Log

    tID  décalage et aller à l'état 43
    tNB  décalage et aller à l'état 44

    Expression      aller à l'état 45
    Expression_Log  aller à l'état 95


État 72

   18 If_condition: tIF tLPAR Expression_Log tRPAR . tLBRACE Statement tRBRACE Statement
   19             | tIF tLPAR Expression_Log tRPAR . tLBRACE Statement tRBRACE tELSE tLBRACE Statement tRBRACE Statement

    tLBRACE  décalage et aller à l'état 96


État 73

   22 Print: tPRINT tLPAR tID tRPAR . tSEMI Statement

    tSEMI  décalage et aller à l'état 97


État 74

   25 Initialisation: tID tASSIGN Expression .
   31 Expression: Expression . tADD Expression
   32           | Expression . tSUB Expression
   33           | Expression . tMUL Expression
   34           | Expression . tDIV Expression
   35           | Expression . tLT Expression
   36           | Expression . tLE Expression
   37           | Expression . tGT Expression
   38           | Expression . tGE Expression
   39           | Expression . tEQ Expression
   40           | Expression . tNE Expression

    tADD  décalage et aller à l'état 60
    tSUB  décalage et aller à l'état 61
    tMUL  décalage et aller à l'état 62
    tDIV  décalage et aller à l'état 63
    tLT   décalage et aller à l'état 64
    tGT   décalage et aller à l'état 65
    tNE   décalage et aller à l'état 66
    tEQ   décalage et aller à l'état 67
    tLE   décalage et aller à l'état 68
    tGE   décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 25 (Initialisation)


État 75

   13 Statement: tINT Initialisation tSEMI Statement .

    $défaut  réduction par utilisation de la règle 13 (Statement)


État 76

   26 Initialisation: Initialisation . tCOMMA Initialisation
   26               | Initialisation tCOMMA Initialisation .

    $défaut  réduction par utilisation de la règle 26 (Initialisation)


État 77

   12 Statement: tCONST tINT Initialisation tSEMI . Statement

    tIF     décalage et aller à l'état 17
    tPRINT  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tCONST  décalage et aller à l'état 20
    tID     décalage et aller à l'état 21

    tWHILE    réduction par utilisation de la règle 20 ($@3)
    $défaut  réduction par utilisation de la règle 11 (Statement)

    Statement     aller à l'état 98
    If_condition  aller à l'état 23
    While_l       aller à l'état 24
    $@3           aller à l'état 25
    Print         aller à l'état 26
    Assignment    aller à l'état 27


État 78

   21 While_l: $@3 tWHILE tLPAR Expression_Log . tRPAR tLBRACE Statement tRBRACE Statement
   42 Expression_Log: Expression_Log . tOR Expression_Log
   43               | Expression_Log . tAND Expression_Log

    tAND   décalage et aller à l'état 70
    tOR    décalage et aller à l'état 71
    tRPAR  décalage et aller à l'état 99


État 79

   31 Expression: Expression . tADD Expression
   32           | Expression . tSUB Expression
   33           | Expression . tMUL Expression
   34           | Expression . tDIV Expression
   35           | Expression . tLT Expression
   36           | Expression . tLE Expression
   37           | Expression . tGT Expression
   38           | Expression . tGE Expression
   39           | Expression . tEQ Expression
   40           | Expression . tNE Expression
   46 Return: tRETURN tLPAR Expression . tRPAR

    tADD   décalage et aller à l'état 60
    tSUB   décalage et aller à l'état 61
    tMUL   décalage et aller à l'état 62
    tDIV   décalage et aller à l'état 63
    tLT    décalage et aller à l'état 64
    tGT    décalage et aller à l'état 65
    tNE    décalage et aller à l'état 66
    tEQ    décalage et aller à l'état 67
    tLE    décalage et aller à l'état 68
    tGE    décalage et aller à l'état 69
    tRPAR  décalage et aller à l'état 100


État 80

    6 Function: $@2 tINT Declaration tLBRACE Statement Return tSEMI tRBRACE .

    $défaut  réduction par utilisation de la règle 6 (Function)


État 81

   30 Expression: tID tLPAR tRPAR .

    $défaut  réduction par utilisation de la règle 30 (Expression)


État 82

   31 Expression: Expression . tADD Expression
   32           | Expression . tSUB Expression
   33           | Expression . tMUL Expression
   34           | Expression . tDIV Expression
   35           | Expression . tLT Expression
   36           | Expression . tLE Expression
   37           | Expression . tGT Expression
   38           | Expression . tGE Expression
   39           | Expression . tEQ Expression
   40           | Expression . tNE Expression
   44 Parameter: Expression .
   45          | Expression . tCOMMA Parameter

    tADD    décalage et aller à l'état 60
    tSUB    décalage et aller à l'état 61
    tMUL    décalage et aller à l'état 62
    tDIV    décalage et aller à l'état 63
    tLT     décalage et aller à l'état 64
    tGT     décalage et aller à l'état 65
    tNE     décalage et aller à l'état 66
    tEQ     décalage et aller à l'état 67
    tLE     décalage et aller à l'état 68
    tGE     décalage et aller à l'état 69
    tCOMMA  décalage et aller à l'état 101

    $défaut  réduction par utilisation de la règle 44 (Parameter)


État 83

   29 Expression: tID tLPAR Parameter . tRPAR

    tRPAR  décalage et aller à l'état 102


État 84

   31 Expression: Expression . tADD Expression
   31           | Expression tADD Expression .
   32           | Expression . tSUB Expression
   33           | Expression . tMUL Expression
   34           | Expression . tDIV Expression
   35           | Expression . tLT Expression
   36           | Expression . tLE Expression
   37           | Expression . tGT Expression
   38           | Expression . tGE Expression
   39           | Expression . tEQ Expression
   40           | Expression . tNE Expression

    $défaut  réduction par utilisation de la règle 31 (Expression)


État 85
